--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -21,9 +21,13 @@ jobs:
       with:
         go-version: 1.22.0
 
+    - name: Run go mod tidy
+      run: go mod tidy
+
     - name: Install golangci-lint
-      run: |
-        curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: v1.58
 
     - name: Run golangci-lint
       run: |
